Lab4/ALL/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:00:50 **** Incremental Build of configuration Debug for project calosc ****
make -j12 all 
arm-none-eabi-size   calosc.elf 
   text	   data	    bss	    dec	    hex	filename
  27276	    136	   1992	  29404	   72dc	calosc.elf
Finished building: default.size.stdout
 
13:01:06 **** Incremental Build of configuration Debug for project calosc ****
make -j12 all 
arm-none-eabi-size   calosc.elf 
   text	   data	    bss	    dec	    hex	filename
  27276	    136	   1992	  29404	   72dc	calosc.elf
Finished building: default.size.stdout
 
13:02:34 **** Incremental Build of configuration Debug for project calosc ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32L476xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:56:6: error: redefinition of 'dac'
 char dac[] = {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255};
      ^~~
../Core/Src/main.c:55:6: note: previous definition of 'dac' was here
 char dac[] = {128, 176, 217, 245, 255, 245, 217, 176, 128, 79, 38, 10, 1, 10, 38, 79};
      ^~~
make: *** [Core/Src/subdir.mk:59: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
13:02:42 **** Incremental Build of configuration Debug for project calosc ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32L476xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "calosc.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\adamj\Desktop\Studia\Semestr_6\SR\Labki\Lab4\ALL\calosc\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="calosc.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: calosc.elf
 
arm-none-eabi-objdump -h -S  calosc.elf  > "calosc.list"
arm-none-eabi-objcopy  -O binary  calosc.elf  "calosc.bin"
arm-none-eabi-size   calosc.elf 
   text	   data	    bss	    dec	    hex	filename
  27276	    140	   1988	  29404	   72dc	calosc.elf
Finished building: default.size.stdout
 
Finished building: calosc.bin
 
Finished building: calosc.list
 
13:06:06 **** Incremental Build of configuration Debug for project calosc ****
make -j12 all 
arm-none-eabi-size   calosc.elf 
   text	   data	    bss	    dec	    hex	filename
  27276	    140	   1988	  29404	   72dc	calosc.elf
Finished building: default.size.stdout
 
